After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758913 - pcapparse: Does not forward FLUSH_STOP events
pcapparse: Does not forward FLUSH_STOP events
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.6.1
Other Linux
: Normal normal
: 1.6.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-01 17:44 UTC by Paolo Pettinato
Modified: 2015-12-07 09:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed fix. (824 bytes, patch)
2015-12-01 17:54 UTC, Paolo Pettinato
committed Details | Review

Description Paolo Pettinato 2015-12-01 17:44:27 UTC
pcapparse currently intercepts a GST_EVENT_FLUSH_STOP event and resets itself. However it does not push the event down the chain.

GST_EVENT_FLUSH_START is not handled and is passed down to the chain; this blocks the downstream elements in a flushing state (as the STOP event is intercepted and handled internally).
Comment 1 Paolo Pettinato 2015-12-01 17:54:07 UTC
Created attachment 316621 [details] [review]
Proposed fix.
Comment 2 Paolo Pettinato 2015-12-01 17:54:50 UTC
Fix will push the GST_EVENT_FLUSH_STOP down the pipeline as well.
Comment 3 Sebastian Dröge (slomo) 2015-12-01 18:04:18 UTC
commit 80366198864f2527754d8c306e4e4328187eb921
Author: Paolo Pettinato <ppettina@cisco.com>
Date:   Tue Dec 1 17:52:03 2015 +0000

    pcapparse: Forward FLUSH_STOP events downstream too
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758913
Comment 4 Zaheer Abbas Merali 2015-12-02 00:36:47 UTC
Thanks slomo, please could we have this merged in the 1.6 branch too.
Comment 5 Sebastian Dröge (slomo) 2015-12-02 07:08:16 UTC
Yes, I'll backport it in a bit.