pcapparse: Forward FLUSH_STOP events downstream too

https://bugzilla.gnome.org/show_bug.cgi?id=758913